Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9479

oqgraph fails to build with boost 1.60

Details

    • 10.2.1-4, 10.2.1-5, 10.0.26

    Description

      https://kojipkgs.fedoraproject.org//work/tasks/526/12700526/build.log

      In file included from /builddir/build/BUILD/mariadb-10.1.10/storage/oqgraph/graphcore-graph.h:28:0,
                       from /builddir/build/BUILD/mariadb-10.1.10/storage/oqgraph/graphcore-graph.cc:26:
      /builddir/build/BUILD/mariadb-10.1.10/storage/oqgraph/oqgraph_shim.h:261:13: error: 'no_graph_bundle' does not name a type
           typedef no_graph_bundle type;
                   ^
      /builddir/build/BUILD/mariadb-10.1.10/storage/oqgraph/oqgraph_shim.h:267:13: error: 'no_vertex_bundle' does not name a type
           typedef no_vertex_bundle type;
                   ^
      [ 33%] Building C object storage/myisam/CMakeFiles/myisam.dir/mi_static.c.o
      /builddir/build/BUILD/mariadb-10.1.10/storage/oqgraph/oqgraph_shim.h:273:13: error: 'no_edge_bundle' does not name a type
           typedef no_edge_bundle type;
                   ^
      

      Attachments

        Issue Links

          Activity

            People

              cvicentiu Vicențiu Ciorbaru
              jdornak Jakub Dorňák
              Votes:
              1 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.