MDEV-9479: Enable OQGRAPH Engine to compile with Boost-1.60+

This used to be a compile failure. The defined structure isn't required
in the later versions of boost.

Signed-off-by: Vicențiu Ciorbaru <vicentiu@mariadb.org>